[tool.poetry]
name = "d&dtgbot"
version = "0.1.0"
description = ""
authors = ["Виктор Киселёв <vkisel102@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.12.0"
ujson = "^5.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
